[build-system]
requires = ["setuptools"]

[project]
name = "alembic-versions"
authors = [
    {name = "Matthew Pounsett", email = "matt@conundrum.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">= 3.14"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Version Control :: Git',
]
dependencies = [
    'pydantic-settings',
    'rich',
]
dynamic = ["version"]

[project.scripts]
alembic-versions = "alembic_versions.main:main"

[tool.setuptools.dynamic]
version = {attr = "alembic_versions.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
    "semantic_version",
    "setuptools",
    "tox"
]

[dependency-groups]
lint = [
    "coverage",
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
    "semantic_version",
    "setuptools",
]

[tool.pylint."messages control"]
max-line-length = 100

[tool.ruff]
line-length = 100
respect-gitignore = true
force-exclude = true
extend-exclude = ["alembic/env.py"]

[tool.ruff.lint]
# more flake8-like
extend-select = ["C901", "D", "E", "F", "W"]
ignore = ["E24"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
env_list = [
    "clean",
    "ruff",
    "py314",
    "stats"
]

[tool.tox.env.clean]
description = "clean up old coverage data"
commands = [["coverage", "erase"]]
deps = ["coverage"]
skip_install = true

[tool.tox.env.pylint]
description = "run pylint"
commands = [["pylint", "src/alembic_versions", "tests"]]
deps = ["pylint"]
ignore_errors = true

[tool.tox.env.ruff]
description = "run ruff"
commands = [["ruff", "check", "src/alembic_versions", "tests"]]
deps = ["ruff"]
ignore_errors = true

[tool.tox.env.stats]
description = "generate coverage report"
commands = [
    ["coverage", "report"],
    ["coverage", "html"]
]
deps = ["coverage"]
skip_install = true

[tool.tox.env_run_base]
description = "run unit tests"
commands = [
    [
        "pytest",
        "-v",
        "--cov=src/alembic_versions",
        "--cov-report=html",
        "--cov-append",
        {replace = "posargs", default = ["tests"], extend = true}
    ]
]
dependency_groups = [
    "lint"
]
